  can be freed too early). (mail_ben_schmidt at yahoo dot com dot au, Dmitry)
- Fixed bug #52849 (GNU MP invalid version match). (Adam)
- Fixed bug #52843 (Segfault when optional parameters are not passed in to
  mssql_connect). (Felipe)
- Fixed bug #52827 (cURL leaks handle and causes assertion error
  (CURLOPT_STDERR)). (Gustavo)
- Fixed bug #52786 (PHP should reset section to [PHP] after ini sections).
  (Fedora at famillecollet dot com)
- Fixed bug #52784 (Race condition when handling many concurrent signals).
  (nick dot telford at gmail dot com, Arnaud)
- Fixed bug #52772 (var_dump() doesn't check for the existence of 
  get_class_name before calling it). (Kalle, Gustavo)
- Fixed bug #52744 (cal_days_in_month incorrect for December 1 BCE).
  (gpap at internet dot gr, Adam)
- Fixed bug #52732 (Docs say preg_match() returns FALSE on error, but it
  returns int(0)). (slugonamission at gmail dot com)
- Fixed bug #52725 (gcc builtin atomic functions were sometimes used when they
  were not available). (fat)
- Fixed bug #52745 (Binding params doesn't work when selecting a date inside a
  CASE-WHEN). (Andrey)
- Fixed bug #52699 (PDO bindValue writes long int 32bit enum).
  (rein at basefarm dot no)
- Fixed bug #52693 (configuration file errors are not logged to stderr). (fat)
- Fixed bug #52686 (mysql_stmt_attr_[gs]et argument points to incorrect type).
  (rein at basefarm dot no)
- Fixed bug #52681 (mb_send_mail() appends an extra MIME-Version header).
  (Adam)
- Fixed bug #52674 (FPM Status page returns inconsistent Content-Type headers).
  (fat)
- Fixed bug #52668 (Iterating over a dateperiod twice is broken). (Derick)
- Fixed bug #52654 (mysqli doesn't install headers with structures it uses).
  (Andrey)
- Fixed bug #52636 (php_mysql_fetch_hash writes long value into int). 
  (Kalle, rein at basefarm dot no)
- Fixed bug #52613 (crash in mysqlnd after hitting memory limit). (Andrey)
- Fixed bug #52599 (iconv output handler outputs incorrect content type